@@ -131,7 +131,7 @@ public class MessagingAuthorizationServiceImpl implements MessagingAuthorization
         Map<String, QueuePermission> queuePermissions = messagingSecurityService.getQueuePermissions();
         QueuePermission permission = queuePermissions.get(destination);
         boolean result = checkPermission(permission, operationType, userName);
-        if (!result && logWarning) {
+        if (!result) {
             if (auditManager != null && auditManager.getJMSConversationMetaData() != null) {
                 ConversationMetaData cmd = (ConversationMetaData) auditManager.getJMSConversationMetaData();
 
@@ -140,21 +140,23 @@ public class MessagingAuthorizationServiceImpl implements MessagingAuthorization
                             Integer.valueOf("201"));
             } else {
                 Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, null, null, null, busName, messagingEngine, destination, operationType, roles, "queue", Integer.valueOf("201"));
+            }  
+            if (logWarning) {
+                SibTr.debug(tc, "USER_NOT_AUTHORIZED_MSE1010",
+                            new Object[] { userName, operationType, destination });
+                throw new MessagingAuthorizationException(Tr.formatMessage(tc, "USER_NOT_AUTHORIZED_MSE1010", userName, operationType, destination));               
+            }
+        } else {
+            if (auditManager != null && auditManager.getJMSConversationMetaData() != null) {
+                ConversationMetaData cmd = (ConversationMetaData) auditManager.getJMSConversationMetaData();
+
+                Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, cmd.getRemoteAddress().getHostAddress(), new Integer(cmd.getRemotePort()).toString(),
+                            cmd.getChainName(), busName, messagingEngine, destination, operationType, roles, "queue",
+                            Integer.valueOf("200"));
+            } else {
+                Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, null, null, null, busName, messagingEngine, destination, operationType, roles, "queue", Integer.valueOf("200"));
             }
 
-            SibTr.debug(tc, "USER_NOT_AUTHORIZED_MSE1010",
-                        new Object[] { userName, operationType, destination });
-            throw new MessagingAuthorizationException(Tr.formatMessage(tc, "USER_NOT_AUTHORIZED_MSE1010", userName, operationType, destination));
-
-        }
-        if (auditManager != null && auditManager.getJMSConversationMetaData() != null) {
-            ConversationMetaData cmd = (ConversationMetaData) auditManager.getJMSConversationMetaData();
-
-            Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, cmd.getRemoteAddress().getHostAddress(), new Integer(cmd.getRemotePort()).toString(),
-                        cmd.getChainName(), busName, messagingEngine, destination, operationType, roles, "queue",
-                        Integer.valueOf("200"));
-        } else {
-            Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, null, null, null, busName, messagingEngine, destination, operationType, roles, "queue", Integer.valueOf("200"));
         }
 
         SibTr.exit(tc, CLASS_NAME + "checkQueueAccess", result);
@@ -260,16 +262,17 @@ public class MessagingAuthorizationServiceImpl implements MessagingAuthorization
             SibTr.debug(tc, "USER_NOT_AUTHORIZED_MSE1010",
                         new Object[] { userName, operationType, destinationName });
             throw new MessagingAuthorizationException(Tr.formatMessage(tc, "USER_NOT_AUTHORIZED_MSE1010", userName, operationType, destinationName));
-        }
-        if (auditManager != null && auditManager.getJMSConversationMetaData() != null) {
-            ConversationMetaData cmd = (ConversationMetaData) auditManager.getJMSConversationMetaData();
-
-            Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, cmd.getRemoteAddress().getHostAddress(), new Integer(cmd.getRemotePort()).toString(),
-                        cmd.getChainName(), busName, messagingEngine, destinationName, operationType, roles, "temporaryDestination", 
-                        Integer.valueOf("200"));
         } else {
-            Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, null, null, null, busName, messagingEngine, destinationName, operationType, 
-                        roles, "temporaryDestination", Integer.valueOf("200"));
+            if (auditManager != null && auditManager.getJMSConversationMetaData() != null) {
+                ConversationMetaData cmd = (ConversationMetaData) auditManager.getJMSConversationMetaData();
+
+                Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, cmd.getRemoteAddress().getHostAddress(), new Integer(cmd.getRemotePort()).toString(),
+                            cmd.getChainName(), busName, messagingEngine, destinationName, operationType, roles, "temporaryDestination", 
+                            Integer.valueOf("200"));
+            } else {
+                Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, null, null, null, busName, messagingEngine, destinationName, operationType, 
+                            roles, "temporaryDestination", Integer.valueOf("200"));
+            }
         }
 
         SibTr.exit(tc, CLASS_NAME + "checkTemporaryDestinationAccess", result);
@@ -359,16 +362,17 @@ public class MessagingAuthorizationServiceImpl implements MessagingAuthorization
             SibTr.debug(tc, "USER_NOT_AUTHORIZED_MSE1010",
                         new Object[] { userName, operationType, destinationName });
             throw new MessagingAuthorizationException(Tr.formatMessage(tc, "USER_NOT_AUTHORIZED_MSE1010", userName, operationType, destinationName));
-        }
-        if (auditManager != null && auditManager.getJMSConversationMetaData() != null) {
-            ConversationMetaData cmd = (ConversationMetaData) auditManager.getJMSConversationMetaData();
-
-            Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, cmd.getRemoteAddress().getHostAddress(), new Integer(cmd.getRemotePort()).toString(),
-                        cmd.getChainName(), busName, messagingEngine, destinationName, operationType, roles, resource,
-                        Integer.valueOf("200"));
         } else {
-            Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, null, null, null, busName, messagingEngine, destinationName, operationType, 
-                        roles, resource, Integer.valueOf("200"));
+            if (auditManager != null && auditManager.getJMSConversationMetaData() != null) {
+                ConversationMetaData cmd = (ConversationMetaData) auditManager.getJMSConversationMetaData();
+
+                Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, cmd.getRemoteAddress().getHostAddress(), new Integer(cmd.getRemotePort()).toString(),
+                            cmd.getChainName(), busName, messagingEngine, destinationName, operationType, roles, resource,
+                            Integer.valueOf("200"));
+            } else {
+                Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, null, null, null, busName, messagingEngine, destinationName, operationType, 
+                            roles, resource, Integer.valueOf("200"));
+            }
         }
 
         SibTr.exit(tc, CLASS_NAME + "checkTopicAccess", result);
@@ -450,7 +454,7 @@ public class MessagingAuthorizationServiceImpl implements MessagingAuthorization
             permission = destinationPermission.get(destination);
         }
         boolean result = checkPermission(permission, operationType, userName);
-        if (!result && logWarning) {
+        if (!result) {
             if (auditManager != null && auditManager.getJMSConversationMetaData() != null) {
                 ConversationMetaData cmd = (ConversationMetaData) auditManager.getJMSConversationMetaData();
 
@@ -461,23 +465,26 @@ public class MessagingAuthorizationServiceImpl implements MessagingAuthorization
                 Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, null, null, null, busName, messagingEngine, destinationName, operationType, 
                             roles, "aliasDestination", Integer.valueOf("201"));
             }
+            if (logWarning) {
+                SibTr.debug(tc, "USER_NOT_AUTHORIZED_MSE1010",
+                            new Object[] { userName, operationType, aliasDestination });
+                throw new MessagingAuthorizationException(Tr.formatMessage(tc, "USER_NOT_AUTHORIZED_MSE1010", userName, operationType, aliasDestination));               
+            }
 
-            SibTr.debug(tc, "USER_NOT_AUTHORIZED_MSE1010",
-                        new Object[] { userName, operationType, aliasDestination });
-            throw new MessagingAuthorizationException(Tr.formatMessage(tc, "USER_NOT_AUTHORIZED_MSE1010", userName, operationType, aliasDestination));
-
-        }
-        if (auditManager != null && auditManager.getJMSConversationMetaData() != null) {
-            ConversationMetaData cmd = (ConversationMetaData) auditManager.getJMSConversationMetaData();
-
-            Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, cmd.getRemoteAddress().getHostAddress(), new Integer(cmd.getRemotePort()).toString(),
-                        cmd.getChainName(), busName, messagingEngine, destinationName, operationType, roles, "aliasDestination",
-                        Integer.valueOf("200"));
         } else {
-            Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, null, null, null, busName, messagingEngine, destinationName, operationType, 
-                        roles, "aliasDestination", Integer.valueOf("200"));
-        }
+            if (auditManager != null && auditManager.getJMSConversationMetaData() != null) {
+                ConversationMetaData cmd = (ConversationMetaData) auditManager.getJMSConversationMetaData();
 
+                Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, cmd.getRemoteAddress().getHostAddress(), new Integer(cmd.getRemotePort()).toString(),
+                            cmd.getChainName(), busName, messagingEngine, destinationName, operationType, roles, "aliasDestination",
+                            Integer.valueOf("200"));
+            } else {
+                Audit.audit(Audit.EventID.SECURITY_JMS_AUTHZ_01, user, null, null, null, busName, messagingEngine, destinationName, operationType, 
+                            roles, "aliasDestination", Integer.valueOf("200"));
+            }
+
+ 
+        }
         SibTr.exit(tc, CLASS_NAME + "checkAliasAccess", result);
         return result;
     }
